# ros-socket-can-driver

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: can_rx.yaml  can_rx_config.yaml  can_tx.yaml  can_tx_config.yaml
include/: ros_socket_can_driver.h  socket_can_driver_node.h
launch/: ros_socket_can_driver.launch  socket_can_driver.launch.py
msg/: CANFrame.msg
src/: ros_socket_can_driver.cpp  socket_can_driver.cpp  socket_can_driver_node.cpp
